--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="#CCffff"
     >
 <!--    <android.support.v7.widget.Toolbar
@@ -28,20 +27,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="#CCffff">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="1030dp"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="446dp"
+            android:layout_height="146dp"
             android:layout_marginTop="0dp"
-           android:scaleType="fitXY"
             android:src="@drawable/y_img_slide_nutrition1"
             android:id="@+id/img_nutrition" />
         <EditText
