--- a/app/src/main/res/layout/activity_y_detail_data.xml
+++ b/app/src/main/res/layout/activity_y_detail_data.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/back"
+        android:id="@+id/y_img_detail_back"
         android:layout_gravity="center_vertical|start"/>
         <TextView
             android:layout_width="wrap_content"
