修改： 部分修改为String

--- a/app/src/main/res/layout/activity_s_healthy__zero.xml
+++ b/app/src/main/res/layout/activity_s_healthy__zero.xml
@@ -41,19 +41,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="“美国油桃”：产地是南美，并不比国产的好吃
-
-　　许多人印象中，似乎进口水果就是贵的代名词，但事实上，如今的水果市场上，很多国产水果价格比进口的更高，最近市场上出售的“美国油桃”，其实产地是在南美，并且品质并不比国产的好。
-
-　　“其实所谓的美国油桃主要是产自南美，国产的主要来自东北产的，东北产的现在是十五六块一斤，南美产的大概十二三块。”众彩市场的吴总介绍，后者在春节之前极其热销，但目前已经接近下市期，由于储存时间比较长了，常常出现里面发黑的情况。而东北产的油桃由于新上市，口感丝毫不输进口的，尤其是那种头部扁平顶部圆圆的，口感非常甜蜜清爽，因此价格也比较贵。
-
-　　记者了解到，一些经销商把产地“南美”的水果说成是产自“美国”主要是想突出其“高端产地”，事实上，许多车厘子、牛油果等也是产自南美国家，诸如智利。
-
-　　“一般手感太软的都不好，说明放的时间比较长了，果实里面容易发黑。”吴总介绍说，无论哪个产地的油桃，购买的时候要注意，越新鲜越好吃。
-
-　　“奶油草莓、牛奶草莓、巧克力草莓：怎么没吃出奶油巧克力味呢？
-
-　　现在在南京，几乎凡是卖草莓的都宣称自己卖的是“奶油草莓”。那么，这种草莓真像奶油一样香甜吗？“好吃是好吃，但真没吃出一点奶油味”，这是不少消费者对所谓“奶油草莓”的感觉。至于“巧克力草莓”，也没人能吃出有巧克力味。那么，这些草莓的实质到底是什么呢？"/>
+                android:text="@string/s_healthyOne"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
