修改：完善adapter内容

--- a/app/src/main/res/layout/activity_w_activity_adapter.xml
+++ b/app/src/main/res/layout/activity_w_activity_adapter.xml
@@ -74,12 +74,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/w_adapter_img"/>
 
-
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/w_adapter_img"/>
         </LinearLayout>
+
 
     </ScrollView>
 
