--- a/app/src/main/res/layout/activity_h_harm.xml
+++ b/app/src/main/res/layout/activity_h_harm.xml
@@ -18,7 +18,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="385dp"
-                android:src="@drawable/h_iamgebutton_searchitem1" />
+                android:id="@+id/h_iamgebutton_searchitem1"
+                 />
 
             <TextView
                 android:layout_width="wrap_content"
