--- a/app/src/main/res/layout/activity_h_ribs.xml
+++ b/app/src/main/res/layout/activity_h_ribs.xml
@@ -18,6 +18,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="385dp"
+                android:id="@+id/h_imageview_ribs"
                 android:src="@drawable/h_imageview_ribs" />
 
             <TextView
