--- a/app/src/main/res/drawable/s_login_btnshape.xml
+++ b/app/src/main/res/drawable/s_login_btnshape.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-    <corners android:radius="8dp">
-    </corners>
-    <gradient
-        android:startColor="@color/s_login_btn"
-        android:endColor="@color/s_login_btn"
-        android:angle="45">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false">
+        <shape>
+            <corners android:radius="8dp">
+            </corners>
+            <gradient
+                android:startColor="@color/query_btn"
+                android:endColor="@color/query_btn"
+                android:angle="45">
+            </gradient>
+        </shape>
+    </item>
+    <item android:state_pressed="true">
+        <shape>
+            <corners android:radius="8dp">
+            </corners>
+            <gradient
+                android:startColor="@color/blue"
+                android:endColor="@color/blue"
+                android:angle="45">
+            </gradient>
+        </shape>
+    </item>
 
-    </gradient>
+
+
+</selector>
 
 
 
-</shape>
+
+
+
