--- a/app/src/main/res/layout/activity_h_candy.xml
+++ b/app/src/main/res/layout/activity_h_candy.xml
@@ -18,8 +18,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="360dp"
-                android:id="@+id/h_imagebutton_fruit_select"
-                 />
+                android:src="@drawable/h_imagebutton_fruit_select" />
 
             <TextView
                 android:layout_width="wrap_content"
