--- a/app/src/main/res/layout/activity_h_harm.xml
+++ b/app/src/main/res/layout/activity_h_harm.xml
@@ -18,8 +18,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="385dp"
-                android:id="@+id/h_iamgebutton_searchitem1"
-                 />
+                android:src="@drawable/h_iamgebutton_searchitem1" />
 
             <TextView
                 android:layout_width="wrap_content"
