--- a/app/src/main/res/layout/layout4.xml
+++ b/app/src/main/res/layout/layout4.xml
@@ -94,7 +94,7 @@
             android:layout_column="0"
             android:layout_marginRight="10dp"
             android:layout_row="0"
-            />
+            android:src="@drawable/h_imagebutton_select1"/>
 
         <TextView
             android:id="@+id/htextView1Center1"
