--- a/app/src/main/res/layout/activity_h_fash.xml
+++ b/app/src/main/res/layout/activity_h_fash.xml
@@ -18,7 +18,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="385dp"
-                android:src="@drawable/h_imagebutton_select2s" />
+                android:id="@+id/hImageViewFash"
+                 />
 
             <TextView
                 android:layout_width="wrap_content"
