--- a/app/src/main/res/layout/activity_h_ribs.xml
+++ b/app/src/main/res/layout/activity_h_ribs.xml
@@ -18,7 +18,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="385dp"
-                android:src="@drawable/h_imageview_ribs" />
+                android:id="@+id/h_imageview_ribs"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
